<resources>
    <string name="app_name">ImFitPlus</string>
    <string name="app_description">Descubra seu perfil de saúde e receba recomendações personalizadas.</string>
    <string name="button_init_label">Comece aqui</string>
    <string name="personal_data">Dados Pessoais</string>
    <string name="name">Nome:</string>
    <string name="name_placeholder">Informe seu nome</string>
    <string name="age">Idade:</string>
    <string name="age_placeholder">Informe sua idade</string>
    <string name="gender">Gênero:</string>
    <string name="female">Feminino</string>
    <string name="male">Masculino</string>
    <string name="height">Altura (metros):</string>
    <string name="height_placeholder">Informe sua altura</string>
    <string name="weight">Peso:</string>
    <string name="weight_placeholder">Informe seu peso</string>
    <string name="physical_activity_level">Selecione o seu nivel de atidade fisica</string>
    <string name="calculate_imc_button_label">Visualizar meu IMC</string>
    <string name="imc_result">Resultado do IMC</string>
    <string name="name_format">Oii %s</string>
    <string name="imc_result_format">Seu IMC é %s</string>
    <string name="category_format">Você se enquadra na categoria %s</string>
    <string name="back">Voltar</string>
    <string name="calculate_calorie_expenditure">Calcular gasto calórico</string>
    <string name="daily_calories">Gasto Diario de calorias</string>
    <string name="daily_calories_result_format">Seu gasto diario de calorias é %s</string>
    <string name="ideal_weight_result_format">Seu peso ideal é %s</string>
    <string name="diff_weight_result_format">A diferenca entre seu peso atual e o peso ideal é %s</string>
    <string name="calculate_ideal_weight">Calcular peso ideal</string>
    <string name="ideal_weight">Peso ideal</string>
    <string name="finish">Finalizar</string>
    <string name="tmb">Sua Taxa Metabólica Basal é %s</string>
    <string name="resumo_de_saude">Resumo de saude</string>
    <string name="nome_s">Nome: %s</string>
    <string name="imc_s">IMC: %s</string>
    <string name="categoria_do_imc_s">Categoria do IMC: %s</string>
    <string name="peso_ideal_s">Peso ideal: %s</string>
    <string name="gasto_calo_rico_diario_s">Gasto Caloórico Diario: %s</string>
    <string name="recomenda_o_de_gasto_de_gua">Recomendação de gasto de água: %s</string>
    <string name="verificar_resumo">Verificar resumo</string>
    <string name="history_user_name">Name</string>
    <string name="divider">|</string>
    <string name="not_is_first_use">Já usei o app antes</string>
    <string name="checkbox_description">Digite o mesmo nome que você usou quando acessou a primeira vez, para buscarmos suas informacoes</string>
    <string name="preencher_informacoes">Preencher informacoes com base no registro anterior</string>
    <string name="save_bt_label">Salvar Informacoes e visualizar historico</string>
    <string name="history_button_label">Visualizar histórico</string>
    <string name="return_to_init_screen">Voltar para o inicio</string>
    <string name="frequ_ncia_maxima_cardiaca_s">Frequência maxima cardiaca: %s</string>
</resources>